Fixes alignment issue, body width on home page

--- a/src/assets/css/7-components/_header.scss
+++ b/src/assets/css/7-components/_header.scss
@@ -4,6 +4,7 @@
         position: relative;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         max-width: var(--container-max-width);
         margin: 0 auto;
         padding: 2rem 1rem; // fallback
@@ -13,10 +14,13 @@
     .nav--primary {
         display: grid;
         grid-template-columns: 1fr min-content;
-        place-items: center;
         column-gap: 2ch;
+        justify-items: end;
+        align-items: center;
+
         @media (min-width: 768px) {
             grid-template-columns: 1fr;
+            place-items: center;
         }
         ul {
             grid-column: 1;
@@ -44,9 +48,11 @@
     &__right {
         position: relative;
     }
-    nav {
-        position: absolute;
-        right: 0;
+    @media (min-width: 768px) {
+        nav {
+            position: absolute;
+            right: 0;
+        }
     }
 }
 
